package com.ansh.FareStrategy;

public enum DurationType {
    HOURS,
    DAYS
}
