package com.ansh.ParkingSpots;

public enum ParkingSpotType {
    CarParking,
    BikeParking,
    OtherParking,

}
