package com.ansh.PaymentStartegy;

public interface PaymentStrategy {
    void processPayment(double amount);
}
