package com.ansh.PaymentStartegy;

public enum PaymentType {
    CASH,
    CARD;
}
