package com.ansh.VehicleFactory;

public enum VehicleType {
    CAR,BIKE,OTHER
}
